--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
     <div class="main">
         <h2>Famous Star Wars Quotes</h2>
-        <button id="wybierz" type="button">Show a quote</button>
+        <button id="wybierz next" type="button">Show a quote</button>
         <div class="wyswietl">
             <blockquote><h2 id = "quote">Quote</h2></blockquote>
             <h3 id = "autor">autor</h3>
